# phosh-mobile-settings

./: .gitignore  .gitlab-ci.yml  HACKING.md  NEWS  README.md  meson.build  org.sigxcpu.MobileSettings.json  phosh-mobile-settings.doap  run.in
.gitlab-ci/: check-consistency  check-po
data/: meson.build  mobi.phosh.MobileSettings.desktop.in  mobi.phosh.MobileSettings.gschema.xml  mobi.phosh.MobileSettings.metainfo.xml.in  mobi.phosh.MobileSettings.service.in  org.sigxcpu.MobileSettings.desktop.in  org.sigxcpu.MobileSettings.gschema.xml  org.sigxcpu.MobileSettings.metainfo.xml.in
data/icons/: meson.build
debian/: changelog  control  copyright  gbp.conf  not-installed  phosh-mobile-settings.install  rules  watch
debian/patches/: Revert-lockscreen-panel-Mark-additional-widgets-as-experi.patch  metainfo-Drop-Purism-form_factor.patch  series
debian/tests/: control
debian/upstream/: metadata  signing-key.asc
plugins/: meson.build
plugins/librem5/: meson.build  ms-plugin-librem5-panel.c  ms-plugin-librem5-panel.h  ms-plugin-librem5.c  ms-plugin-librem5.gresources.xml
plugins/librem5/dbus/: meson.build  org.freedesktop.login1.Manager.xml
plugins/librem5/ui/: ms-plugin-librem5-panel.ui
po/: LINGUAS  POTFILES.in  be.po  bg.po  ca.po  cs.po  de.po  en_GB.po  fa.po  fi.po  fr.po  he.po  hi.po  ht.po  hu.po  id.po  ka.po  meson.build  nl.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  tr.po  uk.po
protocols/: meson.build
src/: main.c  meson.build  mobile-settings-application.c  mobile-settings-application.h  mobile-settings-debug-info.c  mobile-settings-debug-info.h  mobile-settings-enums.h  mobile-settings-plugin.c  mobile-settings-plugin.h  mobile-settings-window.c  mobile-settings-window.h  mobile-settings.gresource.xml  ms-applications-panel.c  ms-applications-panel.h  ms-completer-info.c  ms-completer-info.h  ms-compositor-panel.c  ms-compositor-panel.h  ms-convergence-panel.c  ms-convergence-panel.h  ms-features-panel.c  ms-features-panel.h  ms-feedback-panel.c  ms-feedback-panel.h  ms-feedback-row.c  ms-feedback-row.h  ms-head-tracker.c  ms-head-tracker.h  ms-lockscreen-panel.c  ms-lockscreen-panel.h  ms-osk-add-layout-dialog.c  ms-osk-add-layout-dialog.h  ms-osk-layout-prefs.c  ms-osk-layout-prefs.h  ms-osk-layout-row.c  ms-osk-layout-row.h  ms-osk-layout.c  ms-osk-layout.h  ms-osk-panel.c  ms-osk-panel.h  (+22 more)
src/dbus/: meson.build
src/ui/: mobile-settings-window.ui  ms-applications-panel.ui  ms-compositor-panel.ui  ms-convergence-panel.ui  ms-features-panel.ui  ms-feedback-panel.ui  ms-feedback-row.ui  ms-lockscreen-panel.ui  ms-osk-add-layout-dialog.ui  ms-osk-layout-prefs.ui  ms-osk-layout-row.ui  ms-osk-panel.ui  ms-panel-switcher.ui  ms-plugin-row.ui  ms-scale-to-fit-row.ui  ms-sensor-panel.ui  ms-sound-row.ui  ms-topbar-panel.ui
subprojects/: gmobile.wrap  libadwaita.wrap
tests/: meson.build
